# yagpt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: default.yaml  new.yaml  optimized-128gb.yaml
scripts/: __init__.py  cli.py  preprocess_fineweb.py  split_data.py
tests/: __init__.py  test_model.py  test_tokenizer.py  test_training.py
yagpt/: __init__.py  dataloader.py  eval_harness.py  generate.py  hooks.py  logger.py  model.py  optim.py  profiler.py  tokenizer.py  train.py  training_hooks.py  utils.py
yagpt/data/: __init__.py  dataloader.py
yagpt/models/: __init__.py  attention.py  gpt.py  mlp.py  norm.py  rope.py
yagpt/optim/: __init__.py  lr_schedule.py  muon.py
yagpt/training/: __init__.py  callbacks.py  config.py  trainer.py
